[package]
name = "nrf-usb-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
usb-device = "0.2"
usbd-serial = "0.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
nrf52840-hal = { path = "external/nrf-hal/nrf52840-hal" }
usbd-ethernet = { path = "external/usbd-ethernet" }

[profile.dev]
lto = "thin"
opt-level = "z"
